<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tcc_zanza.no_ip.biz.thirtyminutes.Activity.ConfigurationActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_capital_letter"
            android:textSize="@dimen/main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:id="@+id/cb_capital_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lower_case"
            android:textSize="@dimen/main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:id="@+id/cb_lower_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_number"
            android:textSize="@dimen/main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:id="@+id/cb_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_simbols"
            android:textSize="@dimen/main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:id="@+id/cb_simbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pass_size"
            android:textSize="@dimen/main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/edit_pass_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number"
            android:text="0"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/save_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/cadeado_ok"
        android:background="@color/blue"
        android:layout_gravity="right"/>

    <!--<Button
        android:id="@+id/save_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save_config"/>-->

</LinearLayout>
