<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/text_site"
                android:textSize="@dimen/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site"/>

            <EditText
                android:id="@+id/edit_site"
                android:layout_toEndOf="@id/text_site"
                android:layout_toRightOf="@id/text_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/text_account"
                android:textSize="@dimen/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"/>

            <EditText
                android:id="@+id/edit_account"
                android:layout_toEndOf="@id/text_account"
                android:layout_toRightOf="@id/text_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_pass"
                android:textSize="@dimen/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pass"/>

            <EditText
                android:id="@+id/edit_pass"
                android:layout_toEndOf="@id/text_pass"
                android:layout_toRightOf="@id/text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text"
            android:text="@string/pass"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text"
            android:text="Password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/all_accounts_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cadeado_lista"
            android:background="@color/blue"
            android:layout_gravity="center"/>

        <!--<Button
            android:id="@+id/all_accounts_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_accounts"/>-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cadeado_gerar"
                android:background="@color/blue"
                android:layout_weight="1"
                android:layout_gravity="left"/>

            <!--<Button
                android:id="@+id/generate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/generate"
                android:layout_weight="1"/>-->

            <ImageButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/cadeado_ok"
                android:background="@color/blue"
                android:layout_weight="1"
                android:layout_gravity="right"/>

            <!--<Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>-->

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
